<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="40dp"
    android:paddingBottom="20dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"/>
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_date">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"/>
    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_commentary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_time">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_commentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/done"/>
</androidx.constraintlayout.widget.ConstraintLayout>